        * make sure mogdbsetup doesn't upgrade an existing table (with
          potentially lot of data) from MyISAM to InnoDB.  just warn.
          only new tables should become InnoDB on creation.  also,
          detect InnoDB even on old MySQL 4.0.x, not just 4.1/5.0.

        * make fsck faster (though more fastness remains to be done)

        * make fsck_status faster (keep summary stats of evcode counts,
          rather than doing a full GROUP BY query all the time)

2007-04-20: Release version 2.09

        * filesystem checker (Fsck worker).  off by default, unless
          it's enabled via protocol.  Control/monitor it with mogadm
          in MogileFS-Utils 2.08, which needs MogileFS::Client 1.06.

        * replication speed-up on configurations with only 1 host.
          (replication would randomly have no suggestions before, when
           there was only 1 target host, so replication would be rescheduled
           until the future, when random returned a different device on
           that host)

2007-04-17: Release version 2.08

        * (no runtime-visible changes from 2.07)

        * mogilefsd: remove incomplete "Checker" worker, replace with
          incomplete "Fsck" worker.

        * test cleanup/robustness improvements.  properly skips testing when
          testin deps not found.  but searches harder for them now, too.
          tests run under "make disttest".

        * packaging cleanups, released using ShipIt.


2007-03/04:

        * mogilefsd: Split Plugin::MetaData and Plugin::FilePaths into their own distributions.

        * mogilefsd: Fix mogdbsetup to not ask empty questions.

        * mogilefsd: command line/config file support for listening on specific IPs, also
           support for listening on multiple IPs/ports

2007-03-19:
        * mogstored: use XS HTTPHeaders by default, unless disabled with environment variable

        * mogilefsd: memcache support for get_paths (see doc/memcache-support.txt)

2007-03-16: